<resources>
    <string name="app_name">Mango</string>
    <string name="loader_logo_text">mango</string>
    <string name="title_activity_main">Mango</string>
    <string name="title_order_nearby">Nearby Meals</string>
    <string name="title_my_orders">My Meals</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_product">Meal Overview</string>
    <string name="title_featured">Featured</string>
    <string name="create_meal">New Meal</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="tab_layout_chef">My Meals</string>
    <string name="tab_layout_patron">Reservations</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="auth_failed">Failed to register your account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_anonymous_sign_in">Continue as Guest</string>
    <string name="action_register">New user? Sign Up!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_draweractivity">draweractivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_sign_in">Sign In</string>
    <string name="product_header_allergens">Allergens</string>
    <string name="product_header_ingredients">Ingredients</string>
    <string name="product_header_description">Description</string>
    <string name="product_header_chef">About Chef</string>
    <string name="product_serves">Serves %1$d</string>
    <string name="product_orders_claimed">%1$d Claimed</string>
    <string name="order_service_notification_title_template">Order service: %1$s</string>
    <string name="debug_placeholder_long">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="order_helper_notification_title_template">Order helper: %1$s</string>
    <string name="order_helper_notification_placeholder_text_template"></string>
    <string name="title_activity_maps">Map</string>
    <string name="error_message_starting_app">\"Error occurred trying to authenticate, please try again later\"</string>
    <string name="main_destination_hint">Enter your destination.</string>
    <string name="title_dialog_create_user">Welcome to Mango!</string>
    <string name="image_instructions_dialog_create_user">Add a photo!</string>
    <string name="hint_dialog_create_user_firstname">First Name</string>
    <string name="hint_dialog_create_user_lastname">Last Name</string>
    <string name="hint_dialog_create_user_address">Address</string>
    <string name="hint_dialog_create_user_city">City</string>
    <string name="hint_dialog_create_user_state">State</string>
    <string name="hint_dialog_create_user_zipcode">Postal Code</string>
    <string name="hint_dialog_create_user_phone">Phone</string>
    <string name="hint_dialog_create_user_username">Username</string>
    <string name="hint_dialog_create_user_password">Password</string>
    <string name="hint_dialog_create_user_email">Email</string>
    <string name="title_profile_create_image">Add a picture to your profile</string>
    <string name="title_profile_chef_title">To become a chef, provide your information below.</string>
    <string name="dialog_create_chef_button">Become a Chef!</string>
    <string name="dialog_create_user_button">I don\'t want to be a Chef right now.</string>
    <string name="dialog_create_user_confirm_button">Create Account</string>
    <string name="error_account_validation">Error creating account. Ensure your information is correct and try again.</string>
    <string name="creation_user_error">Please double check the account requirements.</string>
    <string name="error_register_account">An error has occurred trying to register your account.</string>
    <string name="error_login">Error occurred during login, please try again.</string>
    <string name="third_party_error_login">Error occurred during login with %1$s, please try again.</string>
    <string name="error_retrieving_user">Sign in to see your orders.</string>
    <string name="error_retrieving_meals">Error retrieving meal details.</string>
    <string name="error_pick_image">We\'re sorry! An error has occurred while trying to save your image.</string>
    <string name="logout">Logout</string>
    <string name="login_alert">Sign in to see your orders.</string>
    <string name="error_logging_out">An error occurred trying to log out.</string>
    <string name="login">Login</string>
    <string name="settings_terms_of_service">Terms Of Service</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_about_mango">About Mango</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_notification">Notifications</string>
    <string name="my_meals_no_chef_results">You have not shared your meals with anyone, don\'t be so shy.</string>
    <string name="my_meals_no_order_results">You haven\'t tried anyone else\'s meals, don\'t be so shy.</string>
    <string name="order_action">See Meal Details</string>
    <string name="order_number_question">Let\'s appreciate what %1$s is offering the world, claim a share of it! Once requested they will then confirm it!</string>
    <string name="order_confirm_btn">Submit Request</string>
    <string name="order_title">Make a Request</string>
    <string name="order_entry_max_formatted">/ %1$d</string>
    <string name="error_submitting_order">Failed to reserved your meal. Try again later.</string>
    <string name="error_submitting_number_orders">Ensure you are entering a correct number of orders.</string>
    <string name="create_meal_error">An error has occurred, try again later.</string>
    <string name="create_meal_photo">Let us see your wonderful creation!</string>
    <string name="create_meal_name_hint">What do you call this delicious treat?</string>
    <string name="create_meal_name_instructions">We love the photo, now tell us more about it</string>
    <string name="create_meal_description_instructions">Now describe your meal\nWe\'ll ask you for a list of ingredients next.</string>
    <string name="create_meal_description_hint">Make it flavorful</string>
    <string name="create_meal_recipe_instructions">Now the technical details, what\'s in it?</string>
    <string name="create_meal_recipe_hint">Add ingredient</string>
    <string name="create_meal_recipe_allergen_header">Any allergens?</string>
    <string name="create_meal_order_hint">Total orders your can make</string>
    <string name="create_meal_eta_instructions">Good choice of ingredients!\nNow when will this be ready?</string>
    <string name="create_meal_location_instructions">Last but certainly not least\nWhere can users pick up your meals?</string>
    <string name="create_meal_submit">Submit</string>
    <string name="create_meal_continue">Continue</string>
    <string name="create_meal_recipe_notice_header">Anything else you want to let us know about?</string>
    <string name="create_meal_notice_hint">Write down anything else you want to share</string>
    <string name="create_meal_recipe_disclaimer">Be as detailed as possible, and don\'t sweat the quantity.</string>
    <string name="photo_source_gallery">Gallery</string>
    <string name="photo_source_camera">Camera</string>
    <string name="create_meal_allergens_disclaimer">Any info helps! Don\'t worry if you are not sure.</string>
    <string name="change_password_dialog_instructions">To change your password, fill in the details below.</string>
    <string name="hint_change_password_email">Current Email</string>
    <string name="hint_change_password_current_password">Current Password</string>
    <string name="hint_change_password_new_password">New Password</string>
    <string name="change_password_requirements">Your username must have only letters and numbers and at least 6 characters.\nYour new password must contain at least 1 uppercase, 1 lowercase, and 1 number and must be at least 6 characters long.</string>
    <string name="soy">Soy</string>
    <string name="shellfish">Shellfish</string>
    <string name="wheat">Wheat</string>
    <string name="nuts">Nuts</string>
    <string name="dairy">Dairy</string>
    <string name="egg">Egg</string>
</resources>