<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.moraware.mango.base.BaseViewModel" />

        <variable
            name="loginModel"
            type="com.moraware.mango.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.moraware.mango.login.LoginActivity">

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/loader_logo"
                        android:background="@drawable/circular_drawable"
                        android:transitionName="app_logo"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/AppTheme.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{loginModel.errorText}"
                        android:textAlignment="center"
                        android:textColor="@color/errorColor"
                        tools:text="Error with the username or password." />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/email"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:text="@={loginModel.name}"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/password"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:text="@={loginModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/email_sign_in_button"
                        style="@style/MangoButtonBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="@{() -> loginModel.attemptToLogin()}"
                        android:text="@string/action_sign_in" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_up"
                        style="@style/MangoButtonBackground.Outline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="@{() -> loginModel.onCreateNewUser()}"
                        android:text="@string/action_register" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/anonymous_sign_in"
                        style="@style/MangoButtonBackground.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="@{() -> loginModel.onAnonymousSignIn()}"
                        android:text="@string/action_anonymous_sign_in" />

                </LinearLayout>
            </ScrollView>

            <include
                layout="@layout/loading_indicator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                bind:viewModel="@{(BaseViewModel) loginModel}" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/loader_tos_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </FrameLayout>
</layout>
